--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Duru+Sans&family=Kanit:wght@400;500&family=Nanum+Gothic:wght@800&display=swap');
 
 :root {
-    --primary-color:#9CA3AF;
+    --primary-color:#111827;
     --off-white:#1F2937;
     --dark-gray:#F3F4F6;
    
